added simulation notebooks for modelling NMDAR hypoactivation as requested by reviewer 1

--- a/Notebooks/Simulation_Figure_2.ipynb
+++ b/Notebooks/Simulation_Figure_2.ipynb
@@ -71,7 +71,7 @@
     "g_ce_ctrl       = 0.00375         # default=0.015 C-E weight\n",
     "g_ce_schiz      = 0.00375         # default=0.015 C-E weight\n",
     "g_bb            = 0.005           # default=0.02 B-B weight\n",
-    "g_cc            = 0.0\t\t\t  # no C-C inhibition\n",
+    "g_cc            = 0.0             # no C-C inhibition\n",
     "g_bc            = 0.005           # default=0.02 B-C weight\n",
     "g_de            = 0.3             # default=0.3 Drive-E weight\n",
     "g_db            = 0.08            # default=0.08 Drive-B weight\n",
